# libcharsetdetect

./: .gitignore  CMakeLists.txt  README.md  charsetdetect.cpp  configure-iphone  configure-iphone-simulator
cmake-toolchains/: iphone-simulator.toolchain  iphone.toolchain
libcharsetdetect.xcodeproj/: project.pbxproj
nspr-emu/: prcpucfg_win.h
